ノードのダングリング状態を削除