@@ -18,16 +18,13 @@ package net.seapanda.bunnyhop.service;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Set;
+import java.util.SequencedSet;
 import net.seapanda.bunnyhop.model.node.BhNode;
 import net.seapanda.bunnyhop.model.node.BhNode.Swapped;
-import net.seapanda.bunnyhop.model.node.derivative.Derivative;
 import net.seapanda.bunnyhop.model.traverse.DerivativeCollector;
 import net.seapanda.bunnyhop.model.traverse.DerivativeRemover;
-import net.seapanda.bunnyhop.model.traverse.NodeMvcBuilder;
-import net.seapanda.bunnyhop.model.traverse.TextPrompter;
 import net.seapanda.bunnyhop.model.workspace.Workspace;
 import net.seapanda.bunnyhop.undo.UserOperation;
 import net.seapanda.bunnyhop.utility.Vec2D;
@@ -42,21 +39,34 @@ public class BhNodePlacer {
   BhNodePlacer() {}
 
   /**
-   * 引数で指定したBhNodeを削除する.
+   * {@code node} 以下のノードを全て削除する.
+   * {@code node} 以下のノードの派生ノードも削除される.
    *
-   * @param node 削除するノード.
+   * @param node このノード以下のノードを全て削除する.
    * @param userOpe undo 用コマンドオブジェクト
-   * @return この操作の結果消えた子ノードの削除結果のリスト.
-   *         0 番目が {@code node} と, これの代わりに作成されたノードのペアであることが保証される.
+   * @return この操作の結果消えた子ノードとそれと入れ替わったノードのペアのリスト.
+   *         <pre>
+   *         {@code node} が子ノードであった場合
+   *             最初の要素 : {@code node} とこれと入れ替わったノードのペア
+   *             残りの要素 : {@code node} 以下のノードの削除によって消えた'子'派生ノードとそれと入れ替わったノードのペア.
+   *                         ただし, 入れ替わった新しいノードがこの削除操作によって削除された場合,
+   *                         戻り値のリストにそのペアは含まれない.
+   * 
+   *         {@code node} がルートノードであった場合
+   *             全ての要素 : {@code node} 以下のノードの削除によって消えた'子'派生ノードとそれと入れ替わったノードのペア
+   *                         ただし, 入れ替わった新しいノードがこの削除操作によって削除された場合,
+   *                         戻り値のリストにそのペアは含まれない.
+   *         </pre>
    */
-  public List<Swapped> deleteNode(BhNode node, UserOperation userOpe) {
+  public SequencedSet<Swapped> deleteNode(BhNode node, UserOperation userOpe) {
     if (node.isDeleted()) {
-      return new ArrayList<>();
+      return new LinkedHashSet<>();
     }
-    Set<Derivative> derivatives = new HashSet<>();
-    derivatives.addAll(DerivativeCollector.find(node));
-    List<Swapped> swappedNodes = delete(node, userOpe);
-    swappedNodes.addAll(deleteNodes(derivatives, userOpe));
+    var derivatives = DerivativeCollector.collect(node);
+    var tmp = new LinkedHashSet<Swapped>();
+    tmp.addAll(deleteNodes(derivatives, userOpe));
+    SequencedSet<Swapped> swappedNodes = delete(node, userOpe);
+    swappedNodes.addAll(tmp);
     return swappedNodes;
   }
 
@@ -65,7 +75,9 @@ public class BhNodePlacer {
    *
    * @param nodes 削除するノード.
    * @param userOpe undo 用コマンドオブジェクト
-   * @return この操作の結果消えた子ノードの削除結果のリスト.
+   * @return この操作の結果消えた子ノードとそれと入れ替わったノードのペアのリスト.
+   *         ただし, 入れ替わった新しいノードがこの削除操作によって削除された場合,
+   *         戻り値のリストにそのペアは含まれない.
    */
   public List<Swapped> deleteNodes(Collection<? extends BhNode> nodes, UserOperation userOpe) {
     List<Swapped> swappedNodes = new ArrayList<>();
@@ -75,81 +87,75 @@ public class BhNodePlacer {
     return swappedNodes;
   }
 
-  private List<Swapped> delete(BhNode node, UserOperation userOpe) {
+  private SequencedSet<Swapped> delete(BhNode node, UserOperation userOpe) {
     node.deselect(userOpe);
-    final List<Swapped> swappedNodes = removeDependingOnState(node, userOpe);
     DerivativeRemover.remove(node, userOpe);
+    SequencedSet<Swapped> swappedNodes = node.remove(userOpe);
     node.getWorkspace().removeNodeTree(node, userOpe);
     return swappedNodes;
   }
   
-  /** ノードのステートごとの削除処理を行う. */
-  private List<Swapped> removeDependingOnState(BhNode node, UserOperation userOpe) {
-    List<Swapped> swappedNodes = new ArrayList<>();
-    BhNode.State nodeState = node.getState();
-    switch (nodeState) {
-      case CHILD:
-        swappedNodes.addAll(removeChild(node, userOpe));
-        node.getViewProxy().removeFromGuiTree();
-        break;
-
-      case ROOT_DANGLING:
-        node.getViewProxy().removeFromGuiTree();
-        break;
-
-      case ROOT_ON_WS:
-        removeFromWs(node, userOpe);
-        break;
-
-      case DELETED:
-        break;
-
-      default:
-        throw new AssertionError("Invalid node state " + nodeState);
-    }
-    return swappedNodes;
-  }
-
   /**
-   * {@code node} を {@code ws} に移動する.
+   * {@code node} 以下のノードを {@code ws} に移動する.
    *
-   * @param ws {@code node} を追加したいワークスペース
-   * @param node ワークスペース直下に追加したいノード.
+   * @param ws {@code node} 以下のノードを移動させたいワークスペース
+   * @param node これ以下のノードをワークスペース直下に移動させる.
    * @param x ワークスペース上での位置
    * @param y ワークスペース上での位置
    * @param userOpe undo 用コマンドオブジェクト
-   * @return この入れ替え操作で入れ替わったノード一式.
-   *         {@code node} が子ノードであった場合, 0 番目が {@code node} と, これの代わりに作成されたノードのペアであることが保証される.
+   * @return この操作で入れ替わった子ノードのペアのリスト.
+   *         <pre>
+   *         {@code node} が子ノードであった場合
+   *             最初の要素 : {@code node} とこれと入れ替わったノードのペア
+   *             残りの要素 : {@code node} の入れ替えによって入れ替わった'子'派生ノードとそれと入れ替わったノードのペア.
+   * 
+   *         {@code node} がルートノードであった場合
+   *             空のセット
+   *         </pre>
    */
-  public List<Swapped> moveToWs(
+  public SequencedSet<Swapped> moveToWs(
       Workspace ws, BhNode node, double x, double y, UserOperation userOpe) {
     return moveToWs(ws, node, x, y, true, userOpe);
   }
 
   /**
-   * {@code node} を {@code ws} に移動する.
+   * {@code node} 以下のノードを {@code ws} に移動する.
    *
-   * @param ws {@code node} を追加したいワークスペース
-   * @param node ワークスペース直下に追加したいノード.
+   * @param ws {@code node} 以下のノードを移動させたいワークスペース
+   * @param node これ以下のノードをワークスペース直下に移動させる.
    * @param x ワークスペース上での位置
    * @param y ワークスペース上での位置
-   * @param checkSyntaxErr コンパイルエラーをチェックする場合 true
+   * @param checkCompileErr コンパイルエラーをチェックする場合 true
    * @param userOpe undo 用コマンドオブジェクト
-   * @return この入れ替え操作で入れ替わったノード一式.
-   *         {@code node} が子ノードであった場合, 0 番目が {@code node} と, これの代わりに作成されたノードのペアであることが保証される.
+   * @return この操作によって入れ替わった子ノードのペアのリスト.
+   *         <pre>
+   *         {@code node} が子ノードであった場合
+   *             最初の要素 : {@code node} とこれと入れ替わったノードのペア
+   *             残りの要素 : {@code node} の入れ替えによって入れ替わった'子'派生ノードとそれと入れ替わったノードのペア.
+   * 
+   *         {@code node} がルートノードであった場合
+   *             空のセット
+   *         </pre>
    */
-  public List<Swapped> moveToWs(
+  public SequencedSet<Swapped> moveToWs(
       Workspace ws,
       BhNode node,
       double x,
       double y,
-      boolean checkSyntaxErr,
+      boolean checkCompileErr,
       UserOperation userOpe) {
-    final List<Swapped> swappedNodes = removeDependingOnState(node, userOpe);
+    var swappedNodes = new LinkedHashSet<Swapped>();
+    if (node.isChild()) {
+      swappedNodes.addAll(node.remove(userOpe));
+    }
     ws.addNodeTree(node, userOpe);
-    ws.specifyNodeAsRoot(node, userOpe);
     node.getViewProxy().setPosOnWorkspace(new Vec2D(x, y), userOpe);
-    if (checkSyntaxErr) {
+    if (!swappedNodes.isEmpty()) {
+      for (Swapped swapped : new ArrayList<>(swappedNodes).subList(1, swappedNodes.size())) {
+        swappedNodes.addAll(deleteNode(swapped.oldNode(), userOpe));
+      }
+    }
+    if (checkCompileErr) {
       BhService.compileErrNodeManager().collect(node, userOpe);
       BhService.compileErrNodeManager().updateErrorNodeIndicator(userOpe);
     }
@@ -157,121 +163,58 @@ public class BhNodePlacer {
   }
 
   /**
-   * {@code node} を {@code ws} から取り除く.
+   * 子ノードを入れ替える.
+   * {@code oldChild} が子ノードでなかった場合何もしない.
    *
-   * @param node ワークスペース直下から移動させるノード.
-   *             呼び出した後, ワークスペース直下にもノードツリーにも居ない状態になるが消去はされない.
+   * @param oldChild 入れ替え対象の古いノード.
+   *                 呼び出した後, 元々属していたワークスペースのルートノードとなる.
+   * @param newChild 入れ替え対象の新しいノード
    * @param userOpe undo 用コマンドオブジェクト
+   * @return この操作で入れ替わった子ノードのペアのリスト.
+   *         <pre>
+   *         {@code node} が子ノードであった場合
+   *             最初の要素 : {@code oldChild} と {@code newChild} のペア
+   *             残りの要素 : この操作によって入れ替わった'子'派生ノードとそれと入れ替わったノードのペア.
+   * 
+   *         {@code node} がルートノードであった場合
+   *             空のセット
+   *         </pre>
    */
-  private void removeFromWs(BhNode node, UserOperation userOpe) {
-    Vec2D currentPos = node.getViewProxy().getPosOnWorkspace();
-    userOpe.pushCmdOfSetNodePos(node, currentPos);
-    node.getWorkspace().specifyNodeAsNotRoot(node, userOpe);
-    BhService.compileErrNodeManager().collect(node, userOpe);
-    BhService.compileErrNodeManager().updateErrorNodeIndicator(userOpe);
-  }
-
-  /**
-   * 子ノードを取り除く (GUI ツリー上からは取り除かない).
-   * {@code toRemove} が子ノードでなかった場合何もしない.
-   *
-   * @param toRemove 取り除く子ノード. 呼び出した後, ワークスペース直下にもノードツリーにも居ない状態になるが消去はされない.
-   * @param userOpe undo 用コマンドオブジェクト
-   * @return {@code toRemove} を取り除くことで変更のあったノード一式
-   *         0 番目が {@code toRemove} と, これの代わりに作成されたノードのペアであることが保証される.
-   *         {@code toRemove} が子ノードでなかった場合は, 空のリスト.
-   */
-  public List<Swapped> removeChild(BhNode toRemove, UserOperation userOpe) {
-    if (!toRemove.isChild()) {
-      return new ArrayList<>();
+  public SequencedSet<Swapped> replaceChild(
+      BhNode oldChild, BhNode newChild, UserOperation userOpe) {
+    if (!oldChild.isChild() || oldChild == newChild) {
+      return new LinkedHashSet<>();
     }
-    Workspace ws = toRemove.getWorkspace();
-    List<Swapped> swappedNodes = toRemove.remove(userOpe);
-    // 子ノードを取り除いた結果新しくできたノードを, 4 分木空間に登録し, ビューツリーにつなぐ
-    BhNode newNode = swappedNodes.get(0).newNode();
-    if (newNode.getViewProxy().isTemplateNode()) {
-      NodeMvcBuilder.buildTemplate(newNode);
-    } else {
-      NodeMvcBuilder.build(newNode);
+    SequencedSet<Swapped> swappedNodes = new LinkedHashSet<>();
+    swappedNodes.addAll(oldChild.replace(newChild, userOpe));
+    for (Swapped swapped : new ArrayList<>(swappedNodes).subList(1, swappedNodes.size())) {
+      swappedNodes.addAll(deleteNode(swapped.oldNode(), userOpe));
     }
-    TextPrompter.prompt(newNode);
-    ws.addNodeTree(newNode, userOpe);
-    toRemove.getViewProxy().replace(newNode, userOpe);
-
-    for (Swapped swapped : new ArrayList<>(swappedNodes.subList(1, swappedNodes.size()))) {
-      swappedNodes.addAll(completeNewNodeReplacement(swapped, userOpe));
-    }
-    BhService.compileErrNodeManager().collect(toRemove, userOpe);
-    BhService.compileErrNodeManager().collect(newNode, userOpe);
+    BhService.compileErrNodeManager().collect(oldChild, userOpe);
+    BhService.compileErrNodeManager().collect(newChild, userOpe);
     BhService.compileErrNodeManager().updateErrorNodeIndicator(userOpe);
     return swappedNodes;
   }
 
   /**
-   * 子ノードを入れ替える ({@code oldChild} は GUI ツリー上からは取り除かない).
-   * {@code oldChild} が子ノードでなかった場合何もしない.
-   *
-   * @param oldChild 入れ替え対象の古いノード.
-   *                 呼び出した後, ワークスペース直下にもノードツリーにも居ない状態になるが消去はされない.
-   * @param newChild 入れ替え対象の新しいノード
-   * @param userOpe undo 用コマンドオブジェクト
-   * @return この入れ替え操作で入れ替わったノード一式
-   *         0 番目が {@code oldChild} と {@code newChild} のペアであることが保証される.
-   *         {@code oldChild} が子ノードでなかった場合は, 空のリスト.
-   */
-  public List<Swapped> replaceChild(BhNode oldChild, BhNode newChild, UserOperation userOpe) {
-    if (!oldChild.isChild()) {
-      return new ArrayList<>();
-    }
-    final List<Swapped> allSwappedNodes = removeDependingOnState(newChild, userOpe);
-    Workspace ws = oldChild.getWorkspace();
-    ws.addNodeTree(newChild, userOpe);
-    List<Swapped> swappedNodes = oldChild.replace(newChild, userOpe);
-    allSwappedNodes.addAll(swappedNodes);
-    oldChild.getViewProxy().replace(newChild, userOpe);
-    
-    for (Swapped swapped : new ArrayList<>(swappedNodes.subList(1, swappedNodes.size()))) {
-      allSwappedNodes.addAll(completeNewNodeReplacement(swapped, userOpe));
-    }
-    BhService.compileErrNodeManager().collect(oldChild, userOpe);
-    BhService.compileErrNodeManager().collect(newChild, userOpe);
-    BhService.compileErrNodeManager().updateErrorNodeIndicator(userOpe);
-    return allSwappedNodes;
-  }
-
-  /** ノード入れ替えにともなって新しく作成されたノードの入れ替え処理を完了させる. */
-  private List<Swapped> completeNewNodeReplacement(Swapped nodes, UserOperation userOpe) {
-    Workspace ws = nodes.oldNode().getWorkspace();
-    if (nodes.newNode().getViewProxy().isTemplateNode()) {
-      NodeMvcBuilder.buildTemplate(nodes.newNode());
-    } else {
-      NodeMvcBuilder.build(nodes.newNode());
-    }
-    TextPrompter.prompt(nodes.newNode());
-    ws.addNodeTree(nodes.newNode(), userOpe);
-    nodes.oldNode().getViewProxy().replace(nodes.newNode(), userOpe);
-    BhService.derivativeCache().put((Derivative) nodes.oldNode());
-    return deleteNode(nodes.oldNode(), userOpe);
-  }
-
-  /**
    * 2つのノードを入れ替える.
+   * {@code nodeA} と {@code nodeB} は直系であってはならない.
+   * {@code nodeA} と {@code nodeB} はどちらも削除されていてはならない.
    *
-   * @param nodeA 入れ替えたいノード (ダングリング状態のノードはエラー)
-   * @param nodeB 入れ替えたいノード (ダングリング状態のノードはエラー)
+   * @param nodeA 入れ替えたいノード
+   * @param nodeB 入れ替えたいノード
    */
   public void exchangeNodes(BhNode nodeA, BhNode nodeB, UserOperation userOpe) {
-    if (nodeA.isDeleted() || nodeA.isRootDangling()
-        || nodeB.isDeleted() || nodeB.isRootDangling()) {
+    if (nodeA.isDeleted() || nodeB.isDeleted()) {
       throw new IllegalStateException(
-          "try to exchange dangling/deleted nodes.    %s(%s)  %s(%s)".formatted(
+          "try to exchange deleted node(s).    %s(%s)  %s(%s)".formatted(
               nodeA.getSymbolName(), nodeA.getState(), nodeB.getSymbolName(), nodeB.getState()));
 
-    } else if (nodeA.isDescendantOf(nodeB) || nodeB.isDescendantOf(nodeA)) {
-      throw new IllegalStateException("try to exchange parent-child relationship nodes.    %s  %s"
+    } else if (nodeA.isLinealWith(nodeB)) {
+      throw new IllegalStateException("try to exchange lineal nodes.    %s  %s"
           .formatted(nodeA.getSymbolName(), nodeB.getSymbolName()));
     }
-    if (nodeA.getState() == BhNode.State.ROOT_ON_WS
+    if (nodeA.getState() == BhNode.State.ROOT
         && nodeB.getState() == BhNode.State.CHILD) {
       //swap
       BhNode tmp = nodeA;
@@ -287,10 +230,10 @@ public class BhNodePlacer {
     if (nodeA.getState() == BhNode.State.CHILD) {
       // (child, child)
       if (nodeB.getState() == BhNode.State.CHILD) {
-        List<Swapped> swappedNodesA = removeChild(nodeA, userOpe);
-        BhNode newNodeA = swappedNodesA.get(0).newNode();
-        List<Swapped> swappedNodesB = removeChild(nodeB, userOpe);
-        BhNode newNodeB = swappedNodesB.get(0).newNode();        
+        SequencedSet<Swapped> swappedNodesA = moveToWs(wsA, nodeA, 0, 0, userOpe);
+        BhNode newNodeA = swappedNodesA.getFirst().newNode();
+        SequencedSet<Swapped> swappedNodesB = moveToWs(wsB, nodeB, 0, 0, userOpe);
+        BhNode newNodeB = swappedNodesB.getFirst().newNode();
         replaceChild(newNodeA, nodeB, userOpe);
         replaceChild(newNodeB, nodeA, userOpe);
         deleteNode(newNodeA, userOpe);
